fixed overflow on bower/npm/git install section.

--- a/tutorials/angularjs-basic-chat-module/styles.css
+++ b/tutorials/angularjs-basic-chat-module/styles.css
@@ -375,6 +375,7 @@ div.subscribe-container input[type="submit"]:active {
     }
 }
 .install-packages {
+    overflow: scroll;
     display: flex;
     margin: 80px auto;
     max-width: 100vw;
